# sportspet

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  modd.conf
.github/workflows/: codetests.yml  release.yml
assets/logo/: BUILD.bazel
src/battles/: BUILD.bazel  interface.go  mock.go  type.go
src/battles/redis/: BUILD.bazel  redis_battle_service.go  redis_battle_service_test.go
src/board/: BUILD.bazel  board.go  board_test.go
src/challenges/: BUILD.bazel  interface.go  mock.go  type.go
src/challenges/redis/: BUILD.bazel  redis_challenge_service.go  redis_challenge_service_test.go
src/cmd/user_service/: BUILD.bazel  main.go
src/cmd/web_frontend/: BUILD.bazel  main.go
src/sessions/: BUILD.bazel  interface.go  mock.go  type.go
src/sessions/redis/: BUILD.bazel  redis_session_service.go  redis_session_service_test.go
src/settings/: BUILD.bazel  env.go
src/teams/: BUILD.bazel  interface.go  mock.go  type.go
src/teams/redis/: BUILD.bazel  redis_team_service.go  redis_team_service_test.go
src/test/: BUILD.bazel  redis_test_container.go
src/user/service/: BUILD.bazel  login.go  login_test.go  user_service.go  user_service_mock.go
src/user/service/redis/: BUILD.bazel  redis_user_service.go  redis_user_service_test.go  testing.go
src/web_frontend/: BUILD.bazel  api_battles.go  api_challenges.go  api_challenges_test.go  api_sessions.go  api_teams.go  api_teams_test.go  index.go  login.go  login_test.go  routes.go  server.go  utils.go
src/web_frontend/html/: battle.html  index.html  main.html  nick-already-used.html  nick-required.html
src/web_frontend/html/css/: all.css
src/web_frontend/html/js/: battle.js  common.js  main.js
tools/: bazel_ci_env.sh  gofmt_check.sh  launch_demo.sh
tools/go_static_code_checker/: staticcheck.go
