load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "board",
    srcs = ["board.go"],
    importpath = "github.com/tobyjwebb/teamchess/src/board",
    visibility = ["//visibility:public"],
)

go_test(
    name = "board_test",
    srcs = ["board_test.go"],
    embed = [":board"],
)
