load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "web_frontend",
    srcs = [
        "api_teams.go",
        "index.go",
        "login.go",
        "routes.go",
        "server.go",
    ],
    embedsrcs = [
        "html/index.html",
        "html/nick-required.html",
        "html/main.html",
        "html/js/main.js",
        "html/nick-already-used.html",
        ":logo",
    ],
    importpath = "github.com/tobyjwebb/teamchess/src/web_frontend",
    visibility = ["//visibility:public"],
    deps = [
        "//src/settings",
        "//src/teams",
        "//src/teams/redis",
        "//src/user/service",
        "//src/user/service/redis",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_redis_redis_v8//:redis",
    ],
)

genrule(
    name = "logo",
    srcs = ["//assets/logo:v2-rendered.png"],
    outs = ["html/images/team-chess-logo.png"],
    cmd = "mkdir -p html/images && cp $< $@",
)

go_test(
    name = "web_frontend_test",
    srcs = [
        "api_teams_test.go",
        "login_test.go",
    ],
    deps = [
        ":web_frontend",
        "//src/teams",
        "//src/user/service",
    ],
)
