load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redis",
    srcs = ["redis_battle_service.go"],
    importpath = "github.com/tobyjwebb/teamchess/src/battles/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//src/battles",
        "@com_github_go_redis_redis_v8//:redis",
    ],
)

go_test(
    name = "redis_test",
    srcs = ["redis_battle_service_test.go"],
)
