load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "redis",
    srcs = ["redis_battle_service.go"],
    importpath = "github.com/tobyjwebb/teamchess/src/battles/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//src/battles",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_google_uuid//:uuid",
    ],
)
