load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redis",
    srcs = ["redis_challenge_service.go"],
    importpath = "github.com/tobyjwebb/teamchess/src/challenges/redis",
    visibility = ["//visibility:public"],
)

go_test(
    name = "redis_test",
    srcs = ["redis_challenge_service_test.go"],
)
