load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "user_service_lib",
    srcs = ["main.go"],
    importpath = "github.com/tobyjwebb/teamchess/src/cmd/user_service",
    visibility = ["//visibility:private"],
    deps = [
        "//src/settings",
        "//src/user/service",
    ],
)

go_binary(
    name = "user_service",
    embed = [":user_service_lib"],
    visibility = ["//visibility:public"],
)
