load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "web_frontend_lib",
    srcs = ["main.go"],
    importpath = "github.com/tobyjwebb/teamchess/src/cmd/web_frontend",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "web_frontend",
    embed = [":web_frontend_lib"],
    visibility = ["//visibility:public"],
)
