load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "web_frontend_lib",
    srcs = ["main.go"],
    importpath = "github.com/tobyjwebb/teamchess/src/cmd/web_frontend",
    visibility = ["//visibility:private"],
    deps = [
        "//src/settings",
        "//src/web_frontend",
    ],
)

go_binary(
    name = "web_frontend",
    embed = [":web_frontend_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    binary = ":web_frontend",
    visibility = ["//visibility:public"],
)
